tests/invalid/Unsafe_Invalid_10.whiley
unsafe function f(int x) -> (int r):
    return x

final int x = f(1)